升级为Spring Boot 4 + Leyden